 Feature: Added ability to undo multiple players' actions at once, or EVERYONE's actions at once, using /UndoPlayer and /UndoArea. Command syntax changed, see wiki.
 Feature: /Info now shows whether minecraft.net accounts are free or paid.
 Feature: Added special "skip" blocktype, usable with brushes and draw commands.
 Fix: Fixed ServerCLI launching the wrong fCraft binary after running the updater.
 Fix: Fixed a missing warning in /Gen when map height is not a multiple of 16.
 Fix: Fixed a rare case of players receiving desynchronized copies of maps where draw commands are in progress.
 Fix: Improved performance of /Gen, /UndoArea, /UndoAll, and world changes (e.g. /Join).
 Fix: Fixed a crash in "/Commands <Category>"
 Change: Adjustments to block names and aliases.
 Change: Merged /Cancel and /Nvm commands.
 Change: Made /Say, /Me, and /Staff usable by frozen players.
 Change: Added a warning to /Colors regarding the minimum rank required to use colorcodes in chat (thanks Jonty800).
 Change: /Paint command no longer shows up in /Commands for players who cant build/delete.
 API: Added ChatTimer.Started and ChatTimer.Stopped events.

0.624
 Fix: Fixed BlockDB time-limiting code trimming too much data from the database.
 Fix: CommandBook ban import now accepts any filename that ends with ".csv", not just "bans.csv".
 Fix: ServerCLI no longer crashes upon receiving EOF from console.
 Fix: Fixed a rare case of hidden players being revealed (briefly) when their rank is changed.
 Fix: Fixed /Spectate leaving ghost players behind on world change (thanks Hellenion).
 Fix: Fixed a couple typos in WLock/WUnlock (thanks ImNoobSoWhat).
 Change: Added server name to /SInfo
 Change: If opening a link fails (from ConfigGUI or ServerGUI), the URL is copied to clipboard, instead of crashing.
 Change: "/Import bans" no longer prints a message for every player who's already banned, instead showing a total number of already-banned players at the end.